trying to fix horizontal scroll on chrome android, again

--- a/_sass/elementaire/_layout.scss
+++ b/_sass/elementaire/_layout.scss
@@ -4,6 +4,8 @@
 
 .site-header {
   display: grid;
+  position: relative;
+  overflow: hidden;
   grid-template-columns: 5em 1fr;
   grid-template-rows: 5em 2em 1auto;
   grid-template-areas: 
@@ -12,25 +14,48 @@
     "menu menu";
   margin-bottom: 2em;
 
-  &::before {
-    content: '';
+  &__bg {
     position: absolute;
-    top: 21%;
-    left: 50%;
-    width: 120vw;
-    height: 30%;
-    transform: translate(-50%, -130%) rotate(1.2deg);
-    background: $background-alt-color;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 47%;
+    background-color: $background-alt-color;
+    transform: skewY(1.2deg);
+    transform-origin: top right;
     z-index: -1;
-  }
-
-  @include media-query($on-palm) {
-    overflow-x: hidden;
-    &::before {
-      top: 18%;
-      transform: translate(-50%, -130%) rotate(3deg);
+    @include media-query($on-laptop) {
+      height: 45%;
+    }
+    @include media-query($on-medium-screen) {
+      height: 42%;
+    }
+    @include media-query($on-palm) {
+      height: 40%;
     }
   }
+
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 21%;
+  //   left: 50%;
+  //   width: 120vw;
+  //   height: 30%;
+  //   transform: translate(-50%, -130%) rotate(1.2deg);
+  //   background: $background-alt-color;
+  //   z-index: -1;
+  // }
+
+  // @include media-query($on-palm) {
+  //   overflow-x: hidden;
+  //   &::before {
+  //     top: 18%;
+  //     transform: translate(-50%, -130%) rotate(3deg);
+  //   }
+  // }
 }
 
 .site-logo {
